[package]
name = "runlikers"
version = "0.1.0"
edition = "2021"
description = "Reverse-engineer docker run command line arguments based on running containers"
license = "MIT"
repository = "https://github.com/dyrnq/runlikers"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bollard = { version = "0.21", features = ["ssh"] }
shlex = "2"

[[bin]]
name = "runlikers"
path = "src/main.rs"
