[package]
name = "runlikers"
version = "0.1.2"
edition = "2021"
description = "Reverse-engineer docker run command line arguments based on running containers"
license = "MIT"
repository = "https://github.com/dyrnq/runlikers"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
shlex = "2"
[target.'cfg(unix)'.dependencies]
bollard = { version = "0.21", features = ["ssh", "ssl"] }

[target.'cfg(windows)'.dependencies]
bollard = "0.21"


[[bin]]
name = "runlikers"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"
harness = true
